--- a/_posts/2019-11-25-commit-conf-2019.en.markdown
+++ b/_posts/2019-11-25-commit-conf-2019.en.markdown
@@ -21,7 +21,7 @@ categories:
 ### [Refactoring rhyme with simplify](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5682927522283520)
 
 - [🎙️ Javier Abadía](https://twitter.com/javierabadia)
-- [🎥 Talk](https://www.youtube.com/watch?v=ihu6sEbWHFE&t=4617)
+- [🎥 Talk](https://www.youtube.com/watch?v=ihu6sEbWHFE&t=4617), Spanish
 - [📝 Slides](link) (not available yet)
 - Rating: ⭐⭐⭐⭐⭐
 
@@ -60,8 +60,8 @@ Javier talks about several XP practices, placing Refactoring in the center
 ### [DevOps with Docker, Kubernetes and other tools](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5667812190191616)
 
 - [🎙️ Laura Morillo](https://twitter.com/Laura_Morillo)
-- [🎥 Talk](link) (not available yet)
-- [📝 Slides](link) (not available yet)
+- [🎥 Talk](https://youtu.be/5TujOvHBjBE), Spanish
+- [📝 Slides](https://speakerdeck.com/lauramorillo/devops-con-docker-y-kubernetes-y-mas)
 - Rating ⭐⭐⭐⭐
 
 People started talking about *DevOps* in 2009, in a conference, where two Flickr
@@ -91,8 +91,8 @@ vendor)
 
 - [🎙️ Jorge Franco](https://twitter.com/jfrancoleza)
 - [🎙️ Angélica Sanz](https://twitter.com/_AngelicaSanz)
-- [🎥 Talk](link), Spanish (not available yet)
-- [📝 Slides](link) (not available yet)
+- [🎥 Talk](https://youtu.be/y2k0Zl1xrLg)
+- [📝 Slides](https://speakerdeck.com/jorgemagnolia/mejorar-como-desarrollador)
 - Rating ⭐⭐⭐⭐⭐
 
 Do you need a university degree to be a developer? Well, not so much. You'll
@@ -247,7 +247,7 @@ Lots and lots of knowledge about DDD, hexagonal arquitecture, event sourcing,...
 
 - [🎙️ Félix Lopez](https://twitter.com/flopezluis)
 - [🎥 Talk](https://www.youtube.com/watch?v=cITVtXublBg&t=13659), Spanish
-- [📝 Slides](link)
+- [📝 Slides](https://speakerdeck.com/flopezluis/empresas)
 - Rating ⭐⭐⭐⭐⭐
 
 How do we make decisions? How do people think? Knowing some of the [existing
@@ -326,7 +326,7 @@ Beware of assuming people understand exactly what you want to tell them
 
 - [🎙️ Eduardo Sánchez Contreras](https://twitter.com/edusanchezcon)
 - [🎥 Talk](https://www.youtube.com/watch?v=cITVtXublBg&t=21272), Spanish
-- [📝 Slides](link)
+- [📝 Slides](https://www.slideshare.net/EduardoSnchezContrer/tdd-en-el-mundo-real)
 - Rating ⭐⭐⭐
 
 > TDD is a tool to design features, not to design arquitecture
@@ -373,10 +373,16 @@ The speaker highly recommends the outside in approach.
 ## Missed talks
 
 - [DevTools: tools and tricks](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5754544893984768),
-[🎥 Talk](https://www.youtube.com/watch?v=cITVtXublBg&t=24578‬)
-- [Three.js: creando entornos interactivos en 3D](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5690357815705600)
-- [Worst language in the world](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5640221722935296)
+[🎥 Talk](https://www.youtube.com/watch?v=cITVtXublBg&t=24578‬),
+[📝 Slides](https://slides.com/jonroji/devtools-tricks)
+- [Three.js: creando entornos interactivos en 3D](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5690357815705600),
+[🎥 Talk](https://youtu.be/rZIUEwSxglc‬),
+[📝 Slides](https://yunevk.github.io/slides-threejs/index.html)
+- [Worst language in the world](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5640221722935296),
+[🎥 Talk](‬https://youtu.be/_FhOER_P75Y),
+[📝 Slides](https://www.slideshare.net/eduardtomas/el-peor-lenguaje-del-mundo)
 - [Advanced git](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/6331844668686336),
+[🎥 Talk](https://youtu.be/l2Jb9jrmITI),
 [📝 Slides](https://www.jesusamieiro.com/wp-content/uploads/2019/11/20191123-Commit-Conf-Git-avanzado-r2.pdf)
 - [How to implement a peer review learning workflow that your team will love](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5662705071423488),
 [🎥 Talk](https://www.youtube.com/watch?v=xxFvMF5j99o&t=10040),
