--- a/_posts/2019-11-25-commit-conf-2019.markdown
+++ b/_posts/2019-11-25-commit-conf-2019.markdown
@@ -66,8 +66,8 @@ charla muy ensayada seguramente.
 ### [DevOps con Docker, Kubernetes y otras herramientas](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5667812190191616)
 
 - [🎙️ Laura Morillo](https://twitter.com/Laura_Morillo)
-- [🎥 Charla](link) (no disponible todavía)
-- [📝 Presentación](link) (no disponible todavía)
+- [🎥 Charla](https://youtu.be/5TujOvHBjBE)
+- [📝 Presentación](https://speakerdeck.com/lauramorillo/devops-con-docker-y-kubernetes-y-mas)
 - Valoración: ⭐⭐⭐⭐
 
 Se comienza a hablar de *DevOps* allá por 2009, donde en una conferencia, dos
@@ -99,8 +99,8 @@ Me da la impresión de que este concepto lo intenta vender alguien de *cloud*.
 
 - [🎙️ Jorge Franco](https://twitter.com/jfrancoleza)
 - [🎙️ Angélica Sanz](https://twitter.com/_AngelicaSanz)
-- [🎥 Charla](link), Spanish (no disponible todavía)
-- [📝 Presentación](link) (no disponible todavía)
+- [🎥 Charla](https://youtu.be/y2k0Zl1xrLg)
+- [📝 Presentación](https://speakerdeck.com/jorgemagnolia/mejorar-como-desarrollador)
 - Valoración: ⭐⭐⭐⭐⭐
 
 ¿Se necesita carrera universitaria para ser desarrollador? Bueno, no mucho. Se
@@ -147,7 +147,7 @@ curioso.
 ### [SOLID front-end architecture](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5702151527464960)
 
 - 🎙️ Jose Antonio Suarez Guerrero
-- [🎥 Charla](https://www.youtube.com/watch?v=xxFvMF5j99o&t=13525), Spanish
+- [🎥 Charla](https://www.youtube.com/watch?v=xxFvMF5j99o&t=13525)
 - [📝 Presentación](https://speakerdeck.com/albarian/solid-frontend-architecture-do-we-need-it-yes-for-commit-conf-19)
 - Valoración: ⭐⭐⭐
 
@@ -191,7 +191,7 @@ El autor está bastante flipado con el front y con TypeScript en particular.
 
 - [🎙️ Javier Cane](https://twitter.com/JavierCane)
 - [🎙️ Rafa Gómez Casas](https://twitter.com/rafaoe)
-- [🎥 Charla](https://www.youtube.com/watch?v=YVxTSht-zc0&t=4180), Spanish
+- [🎥 Charla](https://www.youtube.com/watch?v=YVxTSht-zc0&t=4180)
 - [📝 Presentación](link) (no disponible todavía)
 - Valoración: ⭐⭐⭐⭐⭐
 
@@ -257,8 +257,8 @@ sobre DDD, arquitectura hexagonal, event sourcing,...
 ### [Unbiasing teams](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5716886352297984)
 
 - [🎙️ Félix Lopez](https://twitter.com/flopezluis)
-- [🎥 Charla](https://www.youtube.com/watch?v=cITVtXublBg&t=13659), Spanish
-- [📝 Presentación](link)
+- [🎥 Charla](https://www.youtube.com/watch?v=cITVtXublBg&t=13659)
+- [📝 Presentación](https://speakerdeck.com/flopezluis/empresas)
 - Valoración: ⭐⭐⭐⭐⭐
 
 ¿Cómo tomamos decisiones? ¿Cómo piensan las personas? Conociendo algunos de los
@@ -335,8 +335,8 @@ con asumir que la gente entiende exactamente lo que tú quieres transmitir
 ### [TDD en el mundo real](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5701249852768256)
 
 - [🎙️ Eduardo Sánchez Contreras](https://twitter.com/edusanchezcon)
-- [🎥 Charla](https://www.youtube.com/watch?v=cITVtXublBg&t=21272), Spanish
-- [📝 Presentación](link)
+- [🎥 Charla](https://www.youtube.com/watch?v=cITVtXublBg&t=21272)
+- [📝 Presentación](https://www.slideshare.net/EduardoSnchezContrer/tdd-en-el-mundo-real)
 - Valoración: ⭐⭐⭐
 
 > TDD es una herramienta de diseño de funcionalidad, no de diseño de arquitectura
@@ -386,9 +386,15 @@ adentro.
 
 - [DevTools: tools and tricks](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5754544893984768),
 [🎥 Charla](https://www.youtube.com/watch?v=cITVtXublBg&t=24578‬)
-- [Three.js: creando entornos interactivos en 3D](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5690357815705600)
+[📝 Presentación](https://slides.com/jonroji/devtools-tricks)
+- [Three.js: creando entornos interactivos en 3D](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5690357815705600),
+[🎥 Charla](https://www.youtube.com/watch?v=rZIUEwSxglc),
+[📝 Presentación](https://yunevk.github.io/slides-threejs/index.html)
 - [El peor lenguaje del mundo](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5640221722935296)
+[🎥 Charla](https://youtu.be/_FhOER_P75Y),
+[📝 Presentación](https://www.slideshare.net/eduardtomas/el-peor-lenguaje-del-mundo)
 - [Git avanzado](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/6331844668686336),
+[🎥 Charla](https://youtu.be/l2Jb9jrmITI),
 [📝 Presentación](https://www.jesusamieiro.com/wp-content/uploads/2019/11/20191123-Commit-Conf-Git-avanzado-r2.pdf)
 - [How to implement a peer review learning workflow that your team will love](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5662705071423488),
 [🎥 Charla](https://www.youtube.com/watch?v=xxFvMF5j99o&t=10040),
